--- a/tabsSection.css
+++ b/tabsSection.css
@@ -21,6 +21,20 @@ body {
     margin-bottom: 50px;
 }
 
+.videoBox .preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: white;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transition: 0.3s linear;
+}
+
 .videoBox iframe{
     margin: 0 auto;
 }
